<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="Location"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"/>

<ListPreference
    android:title="@string/pref_units_label"
    android:key="@string/pref_units_key"
    android:defaultValue="@string/pref_units_metric"
    android:entryValues="@array/pref_unit_values"
    android:entries="@array/pref_unit_options" />

    <CheckBoxPreference
        android:title="Notification"
        android:key="notification"
        android:defaultValue="true"
        android:checked="true"/>

</PreferenceScreen>